--- a/index.html
+++ b/index.html
@@ -1,74 +1,187 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>freelovetoh | ลอยกระทงออนไลน์กับแฟน 💞</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: "Prompt", sans-serif;
+      overflow: hidden;
+      background-color: #000;
+      color: white;
+    }
+
+    /* พื้นหลังแม่น้ำ */
+    .background {
+      position: fixed;
+      inset: 0;
+      background: url("https://png.pngtree.com/thumb_back/fh260/background/20250831/pngtree-loy-krathong-festival-in-thailand-with-traditional-lanterns-and-candle-lights-image_18692648.webp")
+        no-repeat center/cover;
+      animation: floatBg 40s linear infinite;
+      z-index: -2;
+    }
+
+    @keyframes floatBg {
+      from { background-position: 0 0; }
+      to { background-position: 0 100%; }
+    }
+
+    /* เลเยอร์น้ำ */
+    .river {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 180px;
+      background: rgba(0, 0, 50, 0.6);
+      backdrop-filter: blur(3px);
+      box-shadow: inset 0 0 40px rgba(255, 255, 255, 0.1);
+      animation: shimmer 6s ease-in-out infinite;
+    }
+
+    @keyframes shimmer {
+      0%, 100% { opacity: 0.9; }
+      50% { opacity: 0.6; }
+    }
+
+    h1 {
+      text-align: center;
+      padding-top: 30px;
+      font-size: 2em;
+      color: #ffb6c1;
+      text-shadow: 0 0 10px #ffb6c1;
+    }
+
+    .form {
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    input {
+      margin: 8px;
+      padding: 8px 15px;
+      border-radius: 10px;
+      border: none;
+      text-align: center;
+      font-size: 1em;
+    }
+
+    button {
+      margin-top: 15px;
+      padding: 10px 30px;
+      border-radius: 25px;
+      border: none;
+      background-color: #ffd700;
+      font-weight: bold;
+      font-size: 1em;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+      background-color: #fff5b5;
+    }
+
+    .krathong {
+      position: absolute;
+      width: 120px;
+      bottom: 150px;
+      animation: floatKrathong 30s linear infinite;
+    }
+
+    @keyframes floatKrathong {
+      0% { transform: translateX(-200px) translateY(0); }
+      50% { transform: translateX(100vw) translateY(-10px); }
+      100% { transform: translateX(-200px) translateY(0); }
+    }
+
+    .wish-text {
+      position: absolute;
+      bottom: 300px;
+      width: 100%;
+      text-align: center;
+      font-size: 1.3em;
+      color: #ffefaa;
+      text-shadow: 0 0 15px #fff59d;
+      opacity: 0;
+      animation: floatWish 6s ease-in-out infinite;
+    }
+
+    @keyframes floatWish {
+      0% { opacity: 0; transform: translateY(0); }
+      30% { opacity: 1; transform: translateY(-20px); }
+      70% { opacity: 1; transform: translateY(-50px); }
+      100% { opacity: 0; transform: translateY(-80px); }
+    }
+
+    .lantern {
+      position: absolute;
+      bottom: -50px;
+      font-size: 40px;
+      animation: flyLantern 15s linear infinite;
+      opacity: 0.8;
+    }
+
+    @keyframes flyLantern {
+      0% { transform: translateY(0) scale(1); opacity: 0.6; }
+      100% { transform: translateY(-110vh) scale(1.3); opacity: 1; }
+    }
+
+    iframe {
+      display: none;
+    }
+  </style>
 </head>
 <body>
-  <div id="scene">
-    <div id="moon"></div>
-    <div id="stars"></div>
+  <div class="background"></div>
 
-    <div id="welcome" class="overlay">
-      <div class="card">
-        <h1>ที่รักคะ เรามาลอยกระทงกันเถอะ</h1>
-        <p>กดเข้าร่วมเพื่อเริ่มเพลงและสร้างกระทงของเรา</p>
-        <button id="enterBtn" class="btn">เข้าร่วมและเริ่มเพลง</button>
-      </div>
-    </div>
+  <h1>freelovetoh | ลอยกระทงออนไลน์กับแฟน 💞</h1>
 
-    <div id="controls" class="panel">
-      <label>เลือกรูปกระทง (ตัวอย่างเดียว)</label>
-      <div class="thumbs">
-        <img id="templateImg" src="https://pngbie.com/assets/images/icon/Pngbie-%E0%B8%A0%E0%B8%B2%E0%B8%9E%E0%B8%9F%E0%B8%A3%E0%B8%B5-20221030022923.png" alt="krathong template">
-      </div>
-
-      <label>หมุน (องศา)</label>
-      <input id="rotate" type="range" min="0" max="360" value="0">
-
-      <label>ขยาย (%)</label>
-      <input id="scale" type="range" min="50" max="200" value="100">
-
-      <label>ชื่อผู้ลอย</label>
-      <input id="myName" type="text" placeholder="ชื่อของคุณ">
-
-      <label>ชื่อคนรัก</label>
-      <input id="loverName" type="text" placeholder="ชื่อคนรัก">
-
-      <label>คำอวยพร (1)</label>
-      <input id="wish1" type="text" placeholder="ขอให้...">
-
-      <label>คำอวยพร (2)</label>
-      <input id="wish2" type="text" placeholder="(ไม่บังคับ)">
-
-      <label>คำอวยพร (3)</label>
-      <input id="wish3" type="text" placeholder="(ไม่บังคับ)">
-
-      <div class="row">
-        <button id="previewBtn" class="btn">ดูตัวอย่าง</button>
-        <button id="releaseBtn" class="btn primary">💖 ลอยกระทง</button>
-      </div>
-      <p class="note">เมื่อกดลอย กระทงจะถูกเก็บในระบบและผู้ใช้อื่นจะเห็นแบบเรียลไทม์</p>
-    </div>
-
-    <div id="river">
-      <div id="pond"></div>
-    </div>
-
-    <!-- iframe YouTube (จะเพิ่ม autoplay เมื่อผู้กด enter) -->
-    <div id="ytWrap" style="display:none">
-      <iframe id="ytFrame" width="0" height="0" style="display:none"
-        src="https://www.youtube.com/embed/95s3Y8nVMV4?enablejsapi=1&rel=0"
-        frameborder="0" allow="autoplay; encrypted-media"></iframe>
-    </div>
+  <div class="form" id="form">
+    <input type="text" id="yourName" placeholder="ชื่อของคุณ" />
+    <input type="text" id="loverName" placeholder="ชื่อแฟนของคุณ 💞" />
+    <input type="text" id="wish" placeholder="คำอธิษฐาน 1 ข้อ 🕯️" /><br />
+    <button onclick="floatKrathong()">ลอยกระทง 🌕</button>
   </div>
 
-  <!-- Firebase compat SDK -->
-  <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-database-compat.js"></script>
+  <div class="river"></div>
 
-  <script src="script.js"></script>
+  <iframe
+    src="https://www.youtube.com/embed/95s3Y8nVMV4?si=fuCx5HBKEmDlpBeF&autoplay=1&loop=1"
+    allow="autoplay"
+  ></iframe>
+
+  <script>
+    function floatKrathong() {
+      const yourName = document.getElementById("yourName").value;
+      const loverName = document.getElementById("loverName").value;
+      const wish = document.getElementById("wish").value;
+      document.getElementById("form").style.display = "none";
+
+      // กระทง
+      const krathong = document.createElement("img");
+      krathong.src = "https://mthai.com/loykrathong/images/items/2025/krathong-1.png";
+      krathong.className = "krathong";
+      document.body.appendChild(krathong);
+
+      // ข้อความอวยพร
+      const text = document.createElement("div");
+      text.className = "wish-text";
+      text.innerHTML = `<b>${yourName} 💞 ${loverName}</b><br>${wish || "ขอให้ความรักลอยไปกับสายน้ำแห่งความสุข 🌊"}`;
+      document.body.appendChild(text);
+
+      // โคมลอยหลายดวง
+      for (let i = 0; i < 10; i++) {
+        const lantern = document.createElement("div");
+        lantern.className = "lantern";
+        lantern.style.left = Math.random() * 100 + "vw";
+        lantern.style.animationDuration = 10 + Math.random() * 10 + "s";
+        lantern.textContent = "🏮";
+        document.body.appendChild(lantern);
+      }
+    }
+  </script>
 </body>
 </html>
